fix padding and spacing

--- a/public/stylesheets/jquery.lightbox-0.5.css
+++ b/public/stylesheets/jquery.lightbox-0.5.css
@@ -32,11 +32,11 @@
 #lightbox-container-image-box {
 	position: relative;
 	background-color: #fff;
-	width: 250px;
-	height: 250px;
+	width: 800px;
+	height: 600px;
 	margin: 0 auto;
 }
-#lightbox-container-image { padding: 10px; }
+#lightbox-container-image { padding: 40px; }
 #lightbox-loading {
 	position: absolute;
 	top: 40%;
